--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learning to work with SASS</title>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
-    <link href="src/css/style.css" type="text/css" rel="stylesheet"/>
+    <link href="./src/css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 
